Minnor fixes in docs and validation player api
